# zoyel_converse

./: .env.example  .env.template  .gitignore  LICENSE  README.docker.md  README.md  chat_template.jinja  client.py  client_requirements.txt  client_requirements_no_gui.txt  default_config.json  disease_master.json  docker-compose.yml  icd_to_sqlite.py  openapi.yaml  poetry.toml  pyproject.toml  server.py  server_requirements.txt  tool_server.py  windows_client_requirements.txt  windows_server_requirements.txt
client/: .env.example  Dockerfile  client.py  client_requirements.txt  config.json  default_config.json  docker-compose.yml  pyproject.toml  windows_client_requirements.txt
client/prompts/: LANGUAGE_INTEGRATION.md  README.md
client/prompts/custom/: example_custom.json
client/prompts/default/: en.json  es.json  fr.json  hi.json  it.json  ja.json  pt.json  zh.json
client/src/: audio_core.py  audio_output.py  graphical_interface.py  llm_client.py  openai_model.py  voice_chat_agent.py
client/src/tools/: __init__.py  base_tool.py  tool_registry.py  tool_schema.wail
client/src/tools/config/: registry.json
client/src/tools/weather/: __init__.py  weather_tool.py
client/src/tools/weather/config/: config.json
docs/technical/: server_protocol.md  tool_system.md
server/: .env.example  Dockerfile  config.json  default_config.json  docker-compose.yml  download_hf_models.py  pyproject.toml  server.py
server/src/: audio_utils.py  server_audio_core.py
src/: audio_core.py  audio_output.py  audio_utils.py  graphical_interface.py  headless_interface.py  llm_client.py  server_audio_core.py  token_counter.py  volume_window.py
src/functions/: __init__.py
src/functions/timers/: functions.py
tools/: __init__.py  calculate.py  disease_search.py  fetch_patient_data.py  get_icd_11_code_from_disease_name.py  get_time.py  get_visit_diseases.py  get_weather.py  save_patient_data.py  save_visit_diseases.py  search_web.py
