[project]
name = "zoyel-converse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "dataclasses>=0.8",
    "datetime>=5.5",
    "huggingface-hub>=0.34.4",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pathlib>=1.0.1",
    "pyaudio>=0.2.14",
    "simpleaudio>=1.0.4",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.55.0",
    "typing>=3.10.0.0",
    "uuid>=1.30",
    "websockets>=15.0.1",
]
