[project]
name = "zoyel-converse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "customtkinter>=5.2.2",
    "dataclasses>=0.8",
    "datetime>=5.5",
    "huggingface-hub>=0.34.4",
    "kokoro>=0.9.4",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai>=1.101.0",
    "opencv-python>=4.11.0.86",
    "pathlib>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "simpleaudio>=1.0.4",
    "sqlalchemy>=2.0.43",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.55.0",
    "typing>=3.10.0.0",
    "uuid>=1.30",
    "websockets>=15.0.1",
]
