[tool.poetry]
name = "mira-converse-client"
version = "0.1.0"
description = ""
authors = ["Chris Stephens <KardDriver>", "Andrew Lawrence Samaha <andrew.samaha@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
setuptools = "^75.8.0"
numpy = "^2.2.3"
openai = "^1.63.0"
scipy = "^1.15.1"
soundfile = "^0.13.1"
websockets = "^14.2"
sounddevice = "^0.5.1"
python-dotenv = "^1.0.1"
gasp-py = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start = "python client.py"
