[tool.poetry]
name = "mira-converse"
version = "0.1.0"
description = ""
authors = ["Chris Stephens <KartDriver>", "Andrew Lawrence Samaha <andrew.samaha@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
websockets = ">=11.0.3"
torch = "2.5.1"
numpy = ">=1.24.0"
transformers = ">=4.30.0"
scipy = ">=1.11.0"
safetensors = ">=0.3.1"
torchaudio = "2.5.1"
sounddevice = ">=0.4.6"
soundfile = ">=0.12.1"
cmake = ">=3.31.4"
accelerate = ">=1.3.0"
munch = ">=4.0.0"
phonemizer = ">=3.2.0"
torchvision = ">=0.15.0"
kokoro = ">=0.3.1"
silero-vad = ">=5.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start = "python server.py"
